--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
@@ -29,9 +29,18 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Log in to DigitalOcean Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: registry.digitalocean.com
+        username: do-oauth2-registry-token
+        password: ${{ secrets.DO_TOKEN }}
+
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
         context: ./back-end
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
+        tags: |
+          ghcr.io/${{ github.repository_owner }}/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
+          registry.digitalocean.com/agile/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
