--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Push and Deploy
 
 on:
   push:
@@ -14,33 +14,49 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+    outputs:
+      image_digest: ${{ steps.push.outputs.digest }}
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Log in to DigitalOcean Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: registry.digitalocean.com
-        username: do-oauth2-registry-token
-        password: ${{ secrets.DO_TOKEN_REG }}
+      - name: Log in to DigitalOcean Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: registry.digitalocean.com
+          username: do-oauth2-registry-token
+          password: ${{ secrets.DO_TOKEN_REG }}
 
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v4
-      with:
-        context: ./back-end
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository_owner }}/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
-          registry.digitalocean.com/agile/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
+      - name: Build and Push Docker Image
+        id: push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./back-end
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
+            registry.digitalocean.com/agile/backend:${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || 'latest' }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Deploy the app to DigitalOcean App Platform
+        uses: digitalocean/app_action/deploy@v2
+        env:
+          SAMPLE_DIGEST: ${{ needs.build-and-push.outputs.image_digest }}
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
