Update app.yaml to change backend service registry to agile namespace

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -3,6 +3,6 @@ services:
 - name: backend
   image:
     registry_type: DOCR
-    registry: registry.digitalocean.com
+    registry: registry.digitalocean.com/agile
     repository: agile/backend
     digest: ${SAMPLE_DIGEST}
